--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "geekingfrogBlog",
+  "name": "ultimate-tictactoe",
   "version": "0.0.1",
-  "description": "SuperTicTacToe",
+  "description": "Way better version of the most boring game in the world.",
   "dependencies": {
     "express": "3.x",
     "node-watch": "~0.3.3",
@@ -10,6 +10,7 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt": "~0.4.1",
-    "grunt-ember-templates": "=0.4.8"
+    "grunt-ember-templates": "=0.4.8",
+    "q": "~0.9.6"
   }
 }
