--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ultimate-tictactoe",
   "version": "0.0.1",
   "dependencies": {
-    "lodash": "1.3.1"
+    "lodash": "1.3.1",
+    "toastr": "~1.3.1"
   }
 }
