--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt": "~0.4.1",
     "grunt-ember-templates": "=0.4.8",
-    "q": "~0.9.6"
+    "grunt-bower-task": "~0.2.3"
   }
 }
