--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,16 @@
   "version": "0.0.1",
   "dependencies": {
     "lodash": "1.3.1",
-    "toastr": "~1.3.1"
+    "toastr": "~1.3.1",
+    "ember": "1.0.0-rc.6",
+    "handlebars": "1.0.0-rc.4",
+    "jquery": "1.9.1",
+    "foundation": "~4.3.1"
+  },
+  "exportsOverride": {
+    "/.*/": {
+      "js": "**/*.js",
+      "css": "**/*.css"
+    }
   }
 }
