--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt": "~0.4.1",
     "grunt-ember-templates": "=0.4.8",
-    "grunt-bower-task": "~0.2.3"
+    "grunt-bower-task": "~0.2.3",
+    "grunt-contrib-sass": "~0.4.1"
   }
 }
